@@ -1,3 +1,9 @@
+2007-01-23        svu
+
+	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: using proper
+	server name (not the currently selected one - it works incorrectly for
+	VFS).
+
 2007-01-22        svu
 
 	* sql/serverTypes/Sybase.xml, sql/serverTypes/MSSQL.xml,
